ehrenia - name changes

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -32,8 +32,8 @@
  bratecian:0 "Bratecian"
  contrafian:0 "Contrafian"
 
- ehreni_group:0 "Ehrenic"
- ehreni:0 "Ehreni"
+ ehrenic_group:0 "Ehrenic"
+ ehren:0 "Ehren"
  noorden:0 "Noorden"
  niftrand:0 "Niftrand"
 
