--- a/localisation/TD_ehrenia_flavour_l_english.yml
+++ b/localisation/TD_ehrenia_flavour_l_english.yml
@@ -1,3 +1,3 @@
 ﻿l_english:
  ehrenic_confederation:0 "2nd Ehrenic Confederation"
- ehrenic_confederation_desc:0 "The Confederation is a union between the cities and states of ehreni and noorden peoples. After the brutal civil war and the fall of 1st Ehrenic Confederation, this new government has been proclaimed, even more disfunctional than the last."
+ ehrenic_confederation_desc:0 "The Confederation is a union between the cities and states of ehren and noorden peoples. After the brutal civil war and the fall of 1st Ehrenic Confederation, this new government has been proclaimed, even more disfunctional than the last."
