--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -12,16 +12,16 @@
  PROV11:0 "Emedorf"
  PROV12:0 "Himmelnport"
  PROV13:0 "Nerade"
- PROV14:0 "Prov14"
- PROV15:0 "Prov15"
- PROV16:0 "Prov16"
+ PROV14:0 "Derheim"
+ PROV15:0 "Lahwell"
+ PROV16:0 "Newmenz"
  PROV17:0 "Bay of Nifthem"
- PROV18:0 "Prov18"
+ PROV18:0 "Zeschburg"
  PROV19:0 "Togawian Strait"
- PROV20:0 "Prov19"
- PROV21:0 "Prov21"
- PROV22:0 "Prov22"
- PROV23:0 "Prov23"
+ PROV20:0 "Lerhue"
+ PROV21:0 "Itelbronn"
+ PROV22:0 "Risholz"
+ PROV23:0 "Tigdorf"
  PROV24:0 "Pohjoisrantainen"
  PROV25:0 "Metsälammi"
  PROV26:0 "Ambrisatama"
@@ -47,7 +47,7 @@
  PROV46:0 "Lumsal"
  PROV47:0 "Rantaniitty"
  PROV48:0 "Prov48"
- PROV49:0 "Prov49"
+ PROV49:0 "Lerfeld"
  PROV50:0 "Ehrenic Straits"
  PROV51:0 "Kalliokylä"
  PROV52:0 "Karhukorpi"
