ehren religion new name + thumbnail

--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -5,7 +5,7 @@
  sigilian_religion_desc:0 "Sigilianism is the dominant branch of the Saelian church. The secular and religious rule over the world is granted to the Emperor by the God. Emperors are elected for life by the Tetrarchy. According to the official doctrine of the Saelian Church, every country following the true faith serves and follows the will of the Emperor, however in modern times this is only nominal. \n\nJust as Eneratianism, in early days it heavily relied syncretism with local folklores, while still maintaining monotheistic worldview. In 1444 these differences aren't as clear but the influence of local culture still can be seen in regional rites and traditions."
  eneratian:0 "Eneratian"
  eneratian_religion_desc:0 "Eneratianism is the second biggest branch of the Saelian church. It was created during the II century civil war in Saelian faith in which Sigilius in the west and Eneratus in the east both fought for the emperorship. Supporters of Eneratus rejected the idea of tetrarchy and adopted patrimonial doctrine of power. After Eneratian male line became extinct, the church was split between different bishops and became Autokefalic in this process. \n\nJust as Sigilianism, in early days it heavily relied syncretism with local folklores, while still maintaining monotheistic worldview. In 1444 these differences aren't as clear but the influence of local culture still can be seen in regional rites and traditions."
- saelian_ehrenic_pantheon:0 "Saelian Ehrenic Pantheon"
+ saelian_ehrenic_pantheon:0 "Ehren Saelianism"
  liemarian:0 "Liemarian"
 
  yermic:0 "Yermic"
