--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -447,5 +447,16 @@
  NOV:0 "Novoregno"
  NOV_ADJ:0 "Novoregnian"
 
- NAR:0 "New Argenia"
- NAR_ADJ:0 "Argenian"
+ NAR:0 "Niewebehatland"
+ NAR_ADJ:0 "Niewebahian"
+ DEL:0 "Delieania"
+ DEL_ADJ:0 "Delieanian"
+ EAM:0 "Eamenos"
+ EAM_ADJ:0 "Eamenosian"
+ CLE:0 "Cleidemni"
+ CLE_ADJ:0 "Cleidemnian"
+ ACH:0 "Achnith"
+ ACH_ADJ:0 "Achnithian"
+ AKN:0 "Aknaoi"
+ AKN_ADJ:0 "Aknaoian"
+ 
