--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -460,3 +460,9 @@
  AKN:0 "Aknaoi"
  AKN_ADJ:0 "Aknaoian"
  
+ MEM:0 "Memlashal"
+ MEM_ADJ:0 "Memlashan"
+ ZUM:0 "Zumnaseth"
+ ZUM_ADJ:0 "Zumnan"
+ SAH:0 "Sahlbad"
+ SAH_ADJ:0 "Sahlbadan"
