--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -411,7 +411,7 @@
  PROV410:0 "Sata"
  PROV411:0 "Remtiris"
  PROV412:0 "Ostsee"
- PROV413:0 "413"
+ PROV413:0 "Resella"
  PROV414:0 "414"
  PROV415:0 "South Harban Coast"
  PROV416:0 "Envase Fan"
@@ -423,7 +423,7 @@
  PROV422:0 "422"
  PROV423:0 "423"
  PROV424:0 "424"
- PROV425:0 "425"
+ PROV425:0 "Rachiro"
  PROV426:0 "South Cabiran Coast"
  PROV427:0 "Northern Antawili Coast"
  PROV428:0 "528"
@@ -435,7 +435,7 @@
  PROV434:0 "434"
  PROV435:0 "435"
  PROV436:0 "436"
- PROV437:0 "437"
+ PROV437:0 "Vallerne"
  PROV438:0 "438"
  PROV439:0 "439"
  PROV440:0 "Senukai"
@@ -866,14 +866,14 @@
  PROV865:0 "865"
  PROV866:0 "866"
  PROV867:0 "867"
- PROV868:0 "868"
- PROV869:0 "869"
- PROV870:0 "870"
- PROV871:0 "871"
- PROV872:0 "872"
- PROV873:0 "873"
- PROV874:0 "874"
- PROV875:0 "875"
+ PROV868:0 "Utiento"
+ PROV869:0 "Vechena"
+ PROV870:0 "Altentto"
+ PROV871:0 "Arafinne"
+ PROV872:0 "Emazian"
+ PROV873:0 "Rotassa"
+ PROV874:0 "Nareso"
+ PROV875:0 "Diporetto"
  PROV876:0 "Cacumuds"
  PROV877:0 "877"
  PROV878:0 "878"
@@ -924,32 +924,32 @@
  PROV923:0 "923"
  PROV924:0 "924"
  PROV925:0 "925"
- PROV926:0 "926"
- PROV927:0 "927"
- PROV928:0 "928"
- PROV929:0 "929"
+ PROV926:0 "Ivoura"
+ PROV927:0 "Nedrola"
+ PROV928:0 "Onfione"
+ PROV929:0 "Misorenne"
  PROV930:0 "930"
- PROV931:0 "931"
- PROV932:0 "932"
- PROV933:0 "933"
- PROV934:0 "934"
+ PROV931:0 "Ganlonna"
+ PROV932:0 "Belenno"
+ PROV933:0 "Bagenni"
+ PROV934:0 "Tanerano"
  PROV935:0 "Capiranella" 
- PROV936:0 "936"
- PROV937:0 "937"
+ PROV936:0 "Cupenesa"
+ PROV937:0 "Orenade"
  PROV938:0 "938"
  PROV939:0 "939"
- PROV940:0 "940"
- PROV941:0 "941"
- PROV942:0 "942"
- PROV943:0 "943"
+ PROV940:0 "Usotto"
+ PROV941:0 "Massotte"
+ PROV942:0 "Itoento"
+ PROV943:0 "Dentani"
  PROV944:0 "944"
  PROV945:0 "945"
- PROV946:0 "946"
- PROV947:0 "947"
- PROV948:0 "948"
+ PROV946:0 "Toranna"
+ PROV947:0 "Alaienne"
+ PROV948:0 "Rinerate"
  PROV949:0 "949"
- PROV950:0 "950"
- PROV951:0 "951"
+ PROV950:0 "Laziani"
+ PROV951:0 "Fomiosa"
  PROV952:0 "952"
  PROV953:0 "953"
  PROV954:0 "Toula"
