--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -46,7 +46,7 @@
  PROV45:0 "Havuranta"
  PROV46:0 "Lumsal"
  PROV47:0 "Rantaniitty"
- PROV48:0 "Prov48"
+ PROV48:0 "Madave"
  PROV49:0 "Lerfeld"
  PROV50:0 "Ehrenic Straits"
  PROV51:0 "Kalliokylä"
@@ -436,18 +436,18 @@
  PROV435:0 "435"
  PROV436:0 "436"
  PROV437:0 "Vallerne"
- PROV438:0 "438"
- PROV439:0 "439"
+ PROV438:0 "İrinak"
+ PROV439:0 "Daralavar"
  PROV440:0 "Senukai"
  PROV441:0 "Papedes"
  PROV442:0 "Matliman"
- PROV443:0 "443"
- PROV444:0 "444"
+ PROV443:0 "Liler"
+ PROV444:0 "Elekind"
  PROV445:0 "445"
- PROV446:0 "446"
+ PROV446:0 "Kanlabi"
  PROV447:0 "447"
- PROV448:0 "448"
- PROV449:0 "449"
+ PROV448:0 "Amakil"
+ PROV449:0 "Ekener"
  PROV450:0 "450"
  PROV451:0 "451"
  PROV452:0 "Aurville"
@@ -773,29 +773,29 @@
  PROV772:0 "772"
  PROV773:0 "773"
  PROV774:0 "774"
- PROV775:0 "775"
+ PROV775:0 "Lara"
  PROV776:0 "Prawy"
- PROV777:0 "777"
- PROV778:0 "778"
+ PROV777:0 "İleyorir"
+ PROV778:0 "Vebilamin"
  PROV779:0 "Ciapag"
  PROV780:0 "Aukštadvaris"
  PROV781:0 "Liskowa"
- PROV782:0 "782"
- PROV783:0 "783"
+ PROV782:0 "Aken"
+ PROV783:0 "Dindele"
  PROV784:0 "Przada"
- PROV785:0 "785"
- PROV786:0 "786"
- PROV787:0 "787"
- PROV788:0 "788"
- PROV789:0 "789"
- PROV790:0 "790"
- PROV791:0 "791"
- PROV792:0 "792"
- PROV793:0 "793"
+ PROV785:0 "Dutissim"
+ PROV786:0 "Dutissim"
+ PROV787:0 "Çinanal"
+ PROV788:0 "Dayada"
+ PROV789:0 "Laradandol"
+ PROV790:0 "Dedalerar"
+ PROV791:0 "Deda"
+ PROV792:0 "Makenarin"
+ PROV793:0 "Erakasibir"
  PROV794:0 "Enging"
- PROV795:0 "795"
- PROV796:0 "796"
- PROV797:0 "797"
+ PROV795:0 "South Ithagen Sea"
+ PROV796:0 "Ainaichen Coast"
+ PROV797:0 "Ithagen Sea"
  PROV798:0 "798"
  PROV799:0 "799"
  PROV800:0 "800"
