--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -394,7 +394,7 @@
  PROV393:0 "Monne"
  PROV394:0 "394"
  PROV395:0 "395"
- PROV396:0 "396"
+ PROV396:0 "Raçinard"
  PROV397:0 "Vejosiai"
  PROV398:0 "Tauragiris"
  PROV399:0 "Doniepr Fan"
