--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -393,7 +393,7 @@
  PROV392:0 "392"
  PROV393:0 "Monne"
  PROV394:0 "394"
- PROV395:0 "395"
+ PROV395:0 "Paifort"
  PROV396:0 "Raçinard"
  PROV397:0 "Vejosiai"
  PROV398:0 "Tauragiris"
@@ -443,12 +443,12 @@
  PROV442:0 "Matliman"
  PROV443:0 "Liler"
  PROV444:0 "Elekind"
- PROV445:0 "445"
+ PROV445:0 "Pouneport"
  PROV446:0 "Kanlabi"
- PROV447:0 "447"
+ PROV447:0 "Etiville"
  PROV448:0 "Amakil"
  PROV449:0 "Ekener"
- PROV450:0 "450"
+ PROV450:0 "Arcoix"
  PROV451:0 "451"
  PROV452:0 "Aurville"
  PROV453:0 "453"
