--- a/localisation/TD_eneratian_l_english.yml
+++ b/localisation/TD_eneratian_l_english.yml
@@ -12,4 +12,13 @@
  fervor_splendor:0 "Splendor"
 
  eneratian_emperorship:0 "Eneratian Emperorship"
- eneratian_emperorship_desc:0 "Our Ruler is considered to be the De Jure Emperor of the Eneratian Empire. While granting no real power over fellow eneratian countries, this brings a great deal of prestige and recognition."
+ desc_eneratian_emperorship:0 "Our Ruler is considered to be the De Jure Emperor of the Eneratian Empire. While granting no real power over fellow eneratian countries, this brings a great deal of prestige and recognition."
+
+ cb_claim_eneratian_emperorship:0 "Claim Emperorship"
+ cb_claim_eneratian_emperorship_desc:0 "We can claim the crown of the Empire."
+ wg_claim_eneratian_emperorship:0 "Claim Emperorship"
+ wg_claim_eneratian_emperorship_desc:0 "Wargoal is to show our supremacy by winning battles."
+ CLAIM_ENERATIAN_EMPERORSHIP:0 " $ORDER$$FIRST$ war of Eneratian Emperorship"
+ PEACE_po_claim_eneratian_emperorship:0 "§VClaim Emperorship§!"
+ po_claim_eneratian_emperorship_desc:0 "Our ruler will be considered to be the Eneratian Emperor. We will gain extra fervor from this action."
+ CB_ALLOWED_po_claim_eneratian_emperorship:0 "Claiming Emperorship"
