eneratian emperorship - buttons

--- a/localisation/TD_eneratian_l_english.yml
+++ b/localisation/TD_eneratian_l_english.yml
@@ -22,3 +22,8 @@
  PEACE_po_claim_eneratian_emperorship:0 "§VClaim Emperorship§!"
  po_claim_eneratian_emperorship_desc:0 "Our ruler will be considered to be the Eneratian Emperor. We will gain extra fervor from this action."
  CB_ALLOWED_po_claim_eneratian_emperorship:0 "Claiming Emperorship"
+
+ decision_claim_eneratian_emperorship_title:0 "Claim Eneratian Emperorship"
+ decision_claim_eneratian_emperorship_desc:0 "Thanks to the absence of the current Eneratian Emperor, our [Root.Monarch.GetTitle] might bid for this prestigious title."
+ emperor_absent_tt:0 "No Ruler is currently claiming the Emperorship"
+ claim_emperorship_button_tt:0 "Claim Emperorship"
