--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -7830,7 +7830,7 @@
  fervor_modifier:0 "Fervor Powers"
  MODIFIER_MONTHLY_FERVOR_INCREASE:0 "Monthly Fervor"
  FERVOR_INCREASE_DESC:0 "$WHO$ gets $VAL|+=$ points of fervor each month. You can never have more than $MAX|Y$ points."
- CURRENT_FERVOR:0 "$WHO$ currently have $VAL|Y$ points of fervor. The maximum amount $MAX|Y$ points."
+ CURRENT_FERVOR:0 "$WHO$ currently have $VAL|Y$ points of fervor. The maximum amount is $MAX|Y$ points."
  START_PRIVATEER_MISSION:0 "Privateer"
  START_PRIVATEER_MISSION_DESC:0 "A fleet on a Privateer mission will sail under the black flag and steal trade power from the other nations in a Trade Node."
  START_AUTO_TRANSFER_MODE:0 "§YEnable Automatic Transportation§!"
