--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -178,7 +178,7 @@
  conferma_area:0 "Conferma"
  alabergia_area:0 "Alabergia"
  grafouli_area:0 "Grafouli"
- canello_area:0 "Canello"
+ sarneo_area:0 "Sarneo"
  dillatia_area:0 "Dillatia"
  macono_area:0 "Macono"
  scuneo_area:0 "Scuneo"
