--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  PROV1:0 "Geniburgh"
- PROV2:0 "Prov2"
+ PROV2:0 "Linamaco"
  PROV3:0 "Prov3"
  PROV4:0 "Prov4"
  PROV5:0 "Ehrenstadt"
@@ -421,8 +421,8 @@
  PROV420:0 "420"
  PROV421:0 "421"
  PROV422:0 "422"
- PROV423:0 "423"
- PROV424:0 "424"
+ PROV423:0 "Umozzeno"
+ PROV424:0 "Solitaco"
  PROV425:0 "Rachiro"
  PROV426:0 "South Cabiran Coast"
  PROV427:0 "Northern Antawili Coast"
@@ -434,7 +434,7 @@
  PROV433:0 "433"
  PROV434:0 "434"
  PROV435:0 "435"
- PROV436:0 "436"
+ PROV436:0 "Paniero"
  PROV437:0 "Vallerne"
  PROV438:0 "İrinak"
  PROV439:0 "Daralavar"
@@ -855,17 +855,17 @@
  PROV854:0 "854"
  PROV855:0 "855"
  PROV856:0 "856"
- PROV857:0 "857"
- PROV858:0 "858"
- PROV859:0 "859"
- PROV860:0 "860"
- PROV861:0 "861"
- PROV862:0 "862"
- PROV863:0 "863"
+ PROV857:0 "Grottinio"
+ PROV858:0 "Fiserate"
+ PROV859:0 "Voliteria"
+ PROV860:0 "Piematria"
+ PROV861:0 "Sarneo"
+ PROV862:0 "Pimarese"
+ PROV863:0 "Natacia"
  PROV864:0 "864"
- PROV865:0 "865"
- PROV866:0 "866"
- PROV867:0 "867"
+ PROV865:0 "Fiesene"
+ PROV866:0 "Calenia"
+ PROV867:0 "Sucianno"
  PROV868:0 "Utiento"
  PROV869:0 "Vechena"
  PROV870:0 "Altentto"
@@ -892,10 +892,10 @@
  PROV891:0 "891"
  PROV892:0 "892"
  PROV893:0 "893"
- PROV894:0 "894"
- PROV895:0 "895"
- PROV896:0 "896"
- PROV897:0 "897"
+ PROV894:0 "Fiorace"
+ PROV895:0 "Merimolio"
+ PROV896:0 "Coravini"
+ PROV897:0 "Casorola"
  PROV898:0 "898"
  PROV899:0 "899"
  PROV900:0 "900"
@@ -917,12 +917,12 @@
  PROV916:0 "916"
  PROV917:0 "917"
  PROV918:0 "918"
- PROV919:0 "919"
- PROV920:0 "920"
- PROV921:0 "921"
- PROV922:0 "922"
- PROV923:0 "923"
- PROV924:0 "924"
+ PROV919:0 "Romorate"
+ PROV920:0 "Ciricianno"
+ PROV921:0 "Porettia"
+ PROV922:0 "Ciannone"
+ PROV923:0 "Giaranno"
+ PROV924:0 "Enatia"
  PROV925:0 "925"
  PROV926:0 "Ivoura"
  PROV927:0 "Nedrola"
