--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -751,7 +751,7 @@
  PROV750:0 "Mława"
  PROV751:0 "Zytnik"
  PROV752:0 "752"
- PROV753:0 "753"
+ PROV753:0 "Strait of Aideich"
  PROV754:0 "Zawila"
  PROV755:0 "Bialogorze"
  PROV756:0 "756"
