--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -17,7 +17,7 @@
  PROV16:0 "Newmenz"
  PROV17:0 "Bay of Nifthem"
  PROV18:0 "Zeschburg"
- PROV19:0 "Togawian Strait"
+ PROV19:0 "Ziemielian Bay"
  PROV20:0 "Lerhue"
  PROV21:0 "Itelbronn"
  PROV22:0 "Risholz"
@@ -347,7 +347,7 @@
  PROV346:0 "Hercegaosta"
  PROV347:0 "Sea of Laima"
  PROV348:0 "Sena Egle"
- PROV349:0 "Zbojaner Coast"
+ PROV349:0 "Wedlan Coast"
  PROV350:0 "Vaviejas"
  PROV351:0 "Pušyneliai"
  PROV352:0 "352"
@@ -364,8 +364,8 @@
  PROV363:0 "363"
  PROV364:0 "Rihapestid"
  PROV365:0 "Nunwals"
- PROV366:0 "366"
- PROV367:0 "367"
+ PROV366:0 "Coast of Eamenos"
+ PROV367:0 "Coast of Delieania"
  PROV368:0 "368"
  PROV369:0 "Lending"
  PROV370:0 "Enorland"
@@ -397,7 +397,7 @@
  PROV396:0 "Raçinard"
  PROV397:0 "Vejosiai"
  PROV398:0 "Tauragiris"
- PROV399:0 "Doniepr Fan"
+ PROV399:0 "Hapian Bay"
  PROV400:0 "Forsi"
  PROV401:0 "Mezonian Strait"
  PROV402:0 "Zyntar"
