--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -412,15 +412,15 @@
  PROV411:0 "Remtiris"
  PROV412:0 "Ostsee"
  PROV413:0 "Resella"
- PROV414:0 "414"
+ PROV414:0 "Voliunga"
  PROV415:0 "South Harban Coast"
  PROV416:0 "Envase Fan"
- PROV417:0 "417"
+ PROV417:0 "Anatici"
  PROV418:0 "Coraniro"
- PROV419:0 "419"
- PROV420:0 "420"
+ PROV419:0 "Izagiore"
+ PROV420:0 "Piosilvo"
  PROV421:0 "421"
- PROV422:0 "422"
+ PROV422:0 "Rocnone"
  PROV423:0 "Umozzeno"
  PROV424:0 "Solitaco"
  PROV425:0 "Rachiro"
@@ -430,10 +430,10 @@
  PROV429:0 "Paduano"
  PROV430:0 "Viacheli"
  PROV431:0 "Tiepol"
- PROV432:0 "432"
+ PROV432:0 "Faribi"
  PROV433:0 "433"
  PROV434:0 "434"
- PROV435:0 "435"
+ PROV435:0 "Feraseco"
  PROV436:0 "Paniero"
  PROV437:0 "Vallerne"
  PROV438:0 "İrinak"
@@ -772,7 +772,7 @@
  PROV771:0 "771"
  PROV772:0 "772"
  PROV773:0 "773"
- PROV774:0 "774"
+ PROV774:0 "Cadizerio"
  PROV775:0 "Lara"
  PROV776:0 "Prawy"
  PROV777:0 "İleyorir"
@@ -835,7 +835,7 @@
  PROV834:0 "834"
  PROV835:0 "835"
  PROV836:0 "836"
- PROV837:0 "837"
+ PROV837:0 "Gittinora"
  PROV838:0 "838"
  PROV839:0 "839"
  PROV840:0 "840"
@@ -862,7 +862,7 @@
  PROV861:0 "Sarneo"
  PROV862:0 "Pimarese"
  PROV863:0 "Natacia"
- PROV864:0 "864"
+ PROV864:0 "Unibana"
  PROV865:0 "Fiesene"
  PROV866:0 "Calenia"
  PROV867:0 "Sucianno"
@@ -875,48 +875,48 @@
  PROV874:0 "Nareso"
  PROV875:0 "Diporetto"
  PROV876:0 "Cacumuds"
- PROV877:0 "877"
- PROV878:0 "878"
+ PROV877:0 "Osiotte"
+ PROV878:0 "Tacelesia"
  PROV879:0 "879"
- PROV880:0 "880"
- PROV881:0 "881"
+ PROV880:0 "Rionesio"
+ PROV881:0 "Laverie"
  PROV882:0 "882"
- PROV883:0 "883"
+ PROV883:0 "Ceridolie"
  PROV884:0 "884"
- PROV885:0 "885"
- PROV886:0 "886"
- PROV887:0 "887"
+ PROV885:0 "Ronicine"
+ PROV886:0 "Fionella"
+ PROV887:0 "Palisollia"
  PROV888:0 "888"
- PROV889:0 "889"
- PROV890:0 "890"
+ PROV889:0 "Castevola"
+ PROV890:0 "Univerosa"
  PROV891:0 "891"
- PROV892:0 "892"
- PROV893:0 "893"
+ PROV892:0 "Imagarenno"
+ PROV893:0 "Maroni"
  PROV894:0 "Fiorace"
  PROV895:0 "Merimolio"
  PROV896:0 "Coravini"
  PROV897:0 "Casorola"
- PROV898:0 "898"
- PROV899:0 "899"
- PROV900:0 "900"
- PROV901:0 "901"
+ PROV898:0 "Rogicelie"
+ PROV899:0 "Magilerie"
+ PROV900:0 "Gotichio"
+ PROV901:0 "Areteci"
  PROV902:0 "902"
- PROV903:0 "903"
- PROV904:0 "904"
- PROV905:0 "905"
- PROV906:0 "906"
- PROV907:0 "907"
- PROV908:0 "908"
- PROV909:0 "909"
+ PROV903:0 "Bociossa"
+ PROV904:0 "Calati"
+ PROV905:0 "Saferinne"
+ PROV906:0 "Icalite"
+ PROV907:0 "Somirola"
+ PROV908:0 "Ozivinna"
+ PROV909:0 "Meitiesa"
  PROV910:0 "910"
  PROV911:0 "911"
  PROV912:0 "912"
- PROV913:0 "913"
- PROV914:0 "914"
- PROV915:0 "915"
- PROV916:0 "916"
- PROV917:0 "917"
- PROV918:0 "918"
+ PROV913:0 "Castima"
+ PROV914:0 "Zeretinne"
+ PROV915:0 "Rinerone"
+ PROV916:0 "Bria"
+ PROV917:0 "Iraglione"
+ PROV918:0 "Bacoreto"
  PROV919:0 "Romorate"
  PROV920:0 "Ciricianno"
  PROV921:0 "Porettia"
