--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -297,7 +297,7 @@
  SKO_ADJ:0 "Starykorian"
 
  DON:0 "Donuçakar"
- DON_ADJ:0 "Donuçakar"
+ DON_ADJ:0 "Donuçakari"
 
  LAC:0 "Lachel"
  LAC_ADJ:0 "Lachelian"
