camaria provinces final

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -419,20 +419,20 @@
  PROV418:0 "Coraniro"
  PROV419:0 "Izagiore"
  PROV420:0 "Piosilvo"
- PROV421:0 "421"
+ PROV421:0 "Imperiani"
  PROV422:0 "Rocnone"
  PROV423:0 "Umozzeno"
  PROV424:0 "Solitaco"
  PROV425:0 "Rachiro"
  PROV426:0 "South Cabiran Coast"
  PROV427:0 "Northern Antawili Coast"
- PROV428:0 "528"
+ PROV428:0 "Barigini"
  PROV429:0 "Paduano"
  PROV430:0 "Viacheli"
  PROV431:0 "Tiepol"
  PROV432:0 "Faribi"
- PROV433:0 "433"
- PROV434:0 "434"
+ PROV433:0 "Anatina"
+ PROV434:0 "Rivele"
  PROV435:0 "Feraseco"
  PROV436:0 "Paniero"
  PROV437:0 "Vallerne"
@@ -836,25 +836,25 @@
  PROV835:0 "835"
  PROV836:0 "836"
  PROV837:0 "Gittinora"
- PROV838:0 "838"
- PROV839:0 "839"
- PROV840:0 "840"
- PROV841:0 "841"
- PROV842:0 "842"
+ PROV838:0 "Taranne"
+ PROV839:0 "Baratalio"
+ PROV840:0 "Matienia"
+ PROV841:0 "Maimome"
+ PROV842:0 "Cemitonte"
  PROV843:0 "843"
- PROV844:0 "844"
- PROV845:0 "845"
- PROV846:0 "846"
- PROV847:0 "847"
- PROV848:0 "848"
- PROV849:0 "849"
- PROV850:0 "850"
- PROV851:0 "851"
- PROV852:0 "852"
- PROV853:0 "853"
- PROV854:0 "854"
- PROV855:0 "855"
- PROV856:0 "856"
+ PROV844:0 "Ropitara"
+ PROV845:0 "Elesulina"
+ PROV846:0 "Rubmeo"
+ PROV847:0 "Amiterini"
+ PROV848:0 "Pivatiro"
+ PROV849:0 "Gatrinni"
+ PROV850:0 "Lorimine"
+ PROV851:0 "Rinimio"
+ PROV852:0 "Rocinilia"
+ PROV853:0 "Futirinia"
+ PROV854:0 "Calimigli"
+ PROV855:0 "Napicano"
+ PROV856:0 "Inoltio"
  PROV857:0 "Grottinio"
  PROV858:0 "Fiserate"
  PROV859:0 "Voliteria"
