--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -5,7 +5,8 @@
  western_silvestria_region:0 "Western Silvestria"
  eastern_silvestria_region:0 "Eastern Silvestria"
  bogiland_region:0 "Bogiland"
- nifthem_region:0 "Nifthem"
+ noordland_region:0 "Noordland"
+ greater_gyrdia_region:0 "Greater Gyrdia"
  argenia_region:0 "Dorchean Isles"
  chilverchia_region:0 "Chilverchia"
  marstonia_region:0 "Marstonia"
