--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -387,7 +387,7 @@
  PROV386:0 "386"
  PROV387:0 "387"
  PROV388:0 "Cesmont"
- PROV389:0 "389"
+ PROV389:0 "Retonoe"
  PROV390:0 "Brecue"
  PROV391:0 "391"
  PROV392:0 "392"
@@ -449,14 +449,14 @@
  PROV448:0 "Amakil"
  PROV449:0 "Ekener"
  PROV450:0 "Arcoix"
- PROV451:0 "451"
+ PROV451:0 "Requpolis"
  PROV452:0 "Aurville"
- PROV453:0 "453"
+ PROV453:0 "Nancea"
  PROV454:0 "Cuei"
  PROV455:0 "455"
  PROV456:0 "Framont"
- PROV457:0 "457"
- PROV458:0 "458"
+ PROV457:0 "Secnios"
+ PROV458:0 "Lounimos"
  PROV459:0 "Olaix"
  PROV460:0 "Ceuval"
  PROV461:0 "Touris"
@@ -951,13 +951,13 @@
  PROV950:0 "Laziani"
  PROV951:0 "Fomiosa"
  PROV952:0 "952"
- PROV953:0 "953"
+ PROV953:0 "Siliane"
  PROV954:0 "Toula"
  PROV955:0 "Litpere"
  PROV956:0 "956"
  PROV957:0 "Savanmes"
- PROV958:0 "958"
- PROV959:0 "959"
+ PROV958:0 "Gevapolis"
+ PROV959:0 "Roineus"
  PROV960:0 "Boune"
  PROV961:0 "Demauax"
  PROV962:0 "962"
