--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -7967,7 +7967,7 @@
  annex_ramazan_desc:0 "Although the Bey of Ramazan has wisely decided to acknowledge the Sultan's superiority, there are still those who caution that he might prove faithless. Let us bring the lands of Ramazan into our control."
  westerngfx:0 "Western"
  easterngfx:0 "Eastern"
- muslimgfx:0 "Muslim"
+ muslimgfx:0 "Yermic"
  indiangfx:0 "Indian"
  asiangfx:0 "Asian"
  africangfx:0 "African"
