--- a/localisation/TD_saelian_empire_l_english.yml
+++ b/localisation/TD_saelian_empire_l_english.yml
@@ -42,6 +42,7 @@
 
  emperor_expand_diplomatic_reach_title:0 "Expand The Legatorum"
  emperor_expand_diplomatic_reach:0 "Expanded Legatorum"
+ emperor_expand_diplomatic_reach_emperor:0 "Expanded Legatorum"
  emperor_expand_diplomatic_reach_desc:0 "Legates are important to imperial interest, being our envoys abord and bringing important information to the Emperor.\n---\nUnlocks "§YFabricate Casus Belli§!" diplomatic action\n---"
  fabricate_casus_belli_title:0 "Fabricate Insult"
  fabricate_casus_belli_tooltip:0 "Fabricate Insult which will grant us Casus Belli against target country."
@@ -55,6 +56,9 @@
  investigate_heresy_desc:0 "We will demand them to abandon their heresy. If they accept they will convert to our faith and gain §Y100§! Imperial Allegiance. If they decline, we will get §Yholy war§! casus belli against them."
  HAS_REFORMATION_CENTER:0 "Has at least 1 reformation center"
 
+ emperor_establish_proper_bureaucracy_title:0 "Establish Proper Bureaucracy"
+ emperor_establish_proper_bureaucracy_desc:0 "To ensure safety from inside threat, imperial representatives will govern lands of our princes."
+
  emperor_enforce_imperial_will_title:0 "Enforce Imperial Will"
  emperor_enforce_imperial_will:0 "Enforced Imperial Will"
  emperor_enforce_imperial_will_emperor:0 "Enforced Imperial Will"
@@ -63,14 +67,17 @@
  
  emperor_unify_courts_title:0 "Unify Courts"
  emperor_unify_courts:0 "Unified Courts"
+ emperor_unify_courts_emperor:0 "Unified Courts"
  emperor_unify_courts_desc:0 "Courts are backbone of Imperial Law System, therefore they are the first target of Imperial Unification.\n---\n"
 
  emperor_establish_standing_army_title:0 "Establish Standing Army"
  emperor_establish_standing_army:0 "Established Standing Army"
+ emperor_establish_standing_army_per_prince:0 "Established Standing Army"
  emperor_establish_standing_army_desc:0 "If the Empire wants to reform into a modern state, it requires a modern army.\n---\n"
  
  emperor_curtail_princely_power_title:0 "Curtain Princely Power"
  emperor_curtail_princely_power:0 "Curtailed Princely Power"
+ emperor_curtail_princely_power_emperor:0 "Curtailed Princely Power"
  emperor_curtail_princely_power_desc:0 "Imperial Unification is imminent. This step helps us secure our Empire against particularists.\n---\n"
  
  emperor_unite_empire_title:0 "Unite The Empire"
