--- a/localisation/TD_saelian_empire_l_english.yml
+++ b/localisation/TD_saelian_empire_l_english.yml
@@ -57,7 +57,9 @@
  HAS_REFORMATION_CENTER:0 "Has at least 1 reformation center"
 
  emperor_establish_proper_bureaucracy_title:0 "Establish Proper Bureaucracy"
- emperor_establish_proper_bureaucracy_desc:0 "To ensure safety from inside threat, imperial representatives will govern lands of our princes."
+ emperor_establish_proper_bureaucracy:0 "Established Proper Bureaucracy"
+ emperor_establish_proper_bureaucracy_province:0 "Established Proper Bureaucracy"
+ emperor_establish_proper_bureaucracy_desc:0 "To ensure safety from inside threat, imperial representatives will govern lands of our princes.\n---\n"
 
  emperor_enforce_imperial_will_title:0 "Enforce Imperial Will"
  emperor_enforce_imperial_will:0 "Enforced Imperial Will"
