--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -7554,8 +7554,8 @@
  particularist_rebels_name:0 "$COUNTRY$ Particularists"
  particularist_rebels_desc:0 "Particularists are violently opposed to any attempts at centralization by the government. They demand autonomy, though not actual independence."
  particularist_rebels_army:0 "Particularist Army"
- rome_reborn:0 "Rome Reborn"
- desc_rome_reborn:0 "Like a Phoenix from the ashes, The Roman Empire thrones above the world. For the first time since Charlemagne, there is an undisputed and absolute Emperor of The Saelian Empire. The thousand flags of Germany divided have all stopped waving before the one, singular, flag of Rome reborn. Ave Caesar!"
+ rome_reborn:0 "Saelian Empire Reborn"
+ desc_rome_reborn:0 ""
  build_lubeck_krantor_title:0 "The Lübeck Krantor"
  build_lubeck_krantor_desc:0 "With wealth pouring into Lübeck, the port facilities are starting to look under-dimensioned. While it would cost nearly a whole year's income, a Krantor (a massive harbor crane) could greatly improve our trading potential."
  krantor_crane:1 "The Krantor"
