geniburgh company government

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -29,4 +29,10 @@
  narbonese_monarchy_reform_desc:0 "This government represents state of Narbonese Monarchy during the reign of Enrique II - decentralized patrimonial monarchy with subject bound by loyalty and not blood."
  marcan_kingdom_reform:0 "Marcan Kingdom"
  marcan_kingdom_reform_desc:0 "After gaining independence the country needed thourough reform - this is what led to marcan kingdom of Novoregno, less zealous but more united - both in religious and secular ways."
+
+ settled_company_reform:0 "Landed Mercenaries"
+ settled_company_reform_desc:0 "Our military company has managed to obtain sizeable domain, from which we might seek to establish presence as a country."
+ mechanic_is_allowed_to_recruit_mercenaries_no:0 "May not recruit Mercenaries"
+ COMPANY:0 "Mercenary Company"
+ CAPTAIN:0 "Captain"
  
