--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -447,8 +447,8 @@
  NOV:0 "Novoregno"
  NOV_ADJ:0 "Novoregnian"
 
- NAR:0 "Niewebehatland"
- NAR_ADJ:0 "Niewebahian"
+ NAR:0 "Geniburgh Company"
+ NAR_ADJ:0 "Geniburgher"
  DEL:0 "Delieania"
  DEL_ADJ:0 "Delieanian"
  EAM:0 "Eamenos"
