--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1307,7 +1307,7 @@
  PROV1306:0 "1306"
  PROV1307:0 "1307"
  PROV1308:0 "1308"
- PROV1309:0 "1309"
+ PROV1309:0 "New Geniburgh"
  PROV1310:0 "1310"
  PROV1311:0 "1311"
  PROV1312:0 "1312"
