--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -761,7 +761,7 @@
  PROV760:0 "760"
  PROV761:0 "761"
  PROV762:0 "762"
- PROV763:0 "Batnoam depth"
+ PROV763:0 "763"
  PROV764:0 "764"
  PROV765:0 "765"
  PROV766:0 "766"
