--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -436,7 +436,7 @@
  PROV435:0 "Feraseco"
  PROV436:0 "Paniero"
  PROV437:0 "Vallerne"
- PROV438:0 "İrinak"
+ PROV438:0 "Irinak"
  PROV439:0 "Daralavar"
  PROV440:0 "Senukai"
  PROV441:0 "Papedes"
@@ -775,7 +775,7 @@
  PROV774:0 "Cadizerio"
  PROV775:0 "Lara"
  PROV776:0 "Prawy"
- PROV777:0 "İleyorir"
+ PROV777:0 "Ileyorir"
  PROV778:0 "Vebilamin"
  PROV779:0 "Ciapag"
  PROV780:0 "Aukštadvaris"
