religion added + prov fix

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1022,7 +1022,7 @@
  PROV1021:0 "1021"
  PROV1022:0 "1022"
  PROV1023:0 "1023"
- PROV1024:0 "1024"
+ PROV1024:0 "Fawud"
  PROV1025:0 "1025"
  PROV1026:0 "1026"
  PROV1027:0 "mumtalakat" #estate
