--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -23,6 +23,14 @@
  wedlan:0 "Wedlan" 
 
  camarian_group:0 "Camarian"
+ brian:0 "Brian"
+ capirian:0 "Capirian"
+ rubmen:0 "Rubmen"
+ itinian:0 "Itinian"
+ alabergian:0 "Alabergian"
+ tiarn:0 "Tiarn"
+ seren:0 "Seren"
+ tolenian:0 "Tolenian"
 
  acerba_group:0 "Acerba"
  ignider:0 "Ignider"
@@ -50,6 +58,7 @@
 
  northern_anavatic_group:0 "Northern Anavatic"
  buyorman:0 "Buyorman"
+ tenjakelgan:0 "Tenjakelgan"
  
  labosian_group:0 "Labosian"
  rouvian:0 "Rouvian"
@@ -99,3 +108,7 @@
 
  mesutian_group:0 "Mesutian"
  ribyah:0 "Ribyah"
+
+ kakigian_visparayan_group:0 "Kakigian Visparayan"
+ memlashali:0 "Memlashali"
+ haptoiring:0 "Haptoiring"
