conferma tag change - CON -> COF

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -365,8 +365,8 @@
  CHL_ADJ:0 "Cholian"
  ALB:0 "Alabergia"
  ALB_ADJ:0 "Alabergian"
- CON:0 "Conferma"
- CON_ADJ:0 "Conferman"
+ COF:0 "Conferma"
+ COF_ADJ:0 "Conferman"
  MAC:0 "Macono"
  MAC_ADJ:0 "Maconian"
  CAP:0 "Capiranellan League"
