eneratia + chilverch formables

--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -35,3 +35,10 @@
 
  gyrdia_nation_title:0 "Unite Gyrdia @GYR"
  gyrdia_nation_desc:0 "DESC"
+
+ chilverchia_nation_title:0 "Unite Chilverchia @CHV"
+ chilverchia_nation_desc:0 "Pompous and prideful rulers of Chilverch always sought only personal glory, but that only made us divided and weaker. The true strength comes from unity of our people."
+  
+ eneratia_nation_title:0 "Reunite Eneratia @ENE"
+ eneratia_nation_desc:0 "Eneratian Empire fell just as it was conceived - through bloody conflicts and dynastical disputes. Now, since almost a millenium since its dissolution, it will stand proudly, united in faith."
+ 
