--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -466,3 +466,8 @@
  ZUM_ADJ:0 "Zumnan"
  SAH:0 "Sahlbad"
  SAH_ADJ:0 "Sahlbadan"
+
+ CHV:0 "Chilverch"
+ CHV_ADJ:0 "Chilverchian"
+ ENE:0 "Eneratian Empire"
+ ENE_ADJ:0 "Eneratian" 
