--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -350,8 +350,8 @@
  PROV349:0 "Wedlan Coast"
  PROV350:0 "Vaviejas"
  PROV351:0 "Pušyneliai"
- PROV352:0 "352"
- PROV353:0 "353"
+ PROV352:0 "Guolliborrat"
+ PROV353:0 "Stuorivielija"
  PROV354:0 "Storesaale"
  PROV355:0 "Luvima"
  PROV356:0 "Zilverpoort"
