Brianoli Government Reform
- added government reform for Brianola

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -36,3 +36,6 @@
  COMPANY:0 "Mercenary Company"
  CAPTAIN:0 "Captain"
  
+ masccion_dictatorship_reform:0 "Masccion Dictatorship"
+ masccion_dictatorship_reform_desc:0 "Our government is a peasant dictatorship based on hatred towards nobility and bringing them justice by conquest."
+ 
