--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -37,5 +37,5 @@
  CAPTAIN:0 "Captain"
  
  masccion_dictatorship_reform:0 "Masccion Dictatorship"
- masccion_dictatorship_reform_desc:0 "Our government is a peasant dictatorship based on hatred towards nobility and bringing them justice by conquest."
+ masccion_dictatorship_reform_desc:0 "Our government is a peasant republic created by Masccione family that slowly drifted into nepotism and dictatorship."
  
