--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -459,6 +459,8 @@
  ACH_ADJ:0 "Achnithian"
  AKN:0 "Aknaoi"
  AKN_ADJ:0 "Aknaoian"
+ TSK:0 "Tskvania"
+ TSK_ADJ:0 "Tskvanian"
  
  MEM:0 "Memlashal"
  MEM_ADJ:0 "Memlashan"
