--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -461,6 +461,10 @@
  AKN_ADJ:0 "Aknaoian"
  TSK:0 "Tskvania"
  TSK_ADJ:0 "Tskvanian"
+ SHU:0 "Shusali"
+ SHU_ADJ:0 "Shusalian"
+ DAI:0 "Dagivelo"
+ DAI_ADJ:0 "Dagivelian"
  
  MEM:0 "Memlashal"
  MEM_ADJ:0 "Memlashan"
