--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -151,6 +151,8 @@
  KUH:0 "Kuhtirtherren"
  KUH_ADJ:0 "Kuhtirtherrener"
  KEL:0 "Keltmark"
+ STA:0 "Stadacona"
+ STA_ADJ:0 "Stadaconian"
  KEL_ADJ:0 "Keltmarker"
  DEI:0 "Deivokat"
  DEI_ADJ:0 "Deivokater"
