Foreign Steppes Basics
- Added Cyromeid, Karamesruk, Mameria
- Added Cultures of Anavatic Steppe (Turks), Akkcortians (huns).

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -467,6 +467,12 @@
  SHU_ADJ:0 "Shusalian"
  DAI:0 "Dagivelo"
  DAI_ADJ:0 "Dagivelian"
+ KAR:0 "Karamesruk"
+ KAR_ADJ:0 "Karamesrukian"
+ CYR:0 "Cyromeid"
+ CYR_ADJ:0 "Cyromeidian"
+ MAM:0 "Mameria"
+ MAM_ADJ:0 "Mamerian"
  
  MEM:0 "Memlashal"
  MEM_ADJ:0 "Memlashan"
