--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -473,6 +473,8 @@
  CYR_ADJ:0 "Cyromeidian"
  MAM:0 "Mameria"
  MAM_ADJ:0 "Mamerian"
+ CHR:0 "Charadied"
+ CHR_ADJ:0 "Charadiedian"
  
  MEM:0 "Memlashal"
  MEM_ADJ:0 "Memlashan"
