map and contrueis

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -487,3 +487,10 @@
  CHV_ADJ:0 "Chilverchian"
  ENE:0 "Eneratian Empire"
  ENE_ADJ:0 "Eneratian" 
+
+ EHW:0 "Ewitraw"
+ EHW_ADJ:0 "Ewitrawian"
+ MEW:0 "Mewat"
+ MEW_ADJ:0 "Mewatian"
+ EHT:0 "Ehtywira"
+ EHT_ADJ:0 "Ehtywiran"
