cultures and cultures

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -488,9 +488,11 @@
  ENE:0 "Eneratian Empire"
  ENE_ADJ:0 "Eneratian" 
 
- EHW:0 "Ewitraw"
- EHW_ADJ:0 "Ewitrawian"
+ EHW:0 "Ehwitraw"
+ EHW_ADJ:0 "Ehwitrawian"
  MEW:0 "Mewat"
  MEW_ADJ:0 "Mewatian"
  EHT:0 "Ehtywira"
  EHT_ADJ:0 "Ehtywiran"
+ FRA:0 "Fravasum"
+ FRA_ADJ:0 "Fravasumi"
