--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -9,3 +9,5 @@
 
  magkirche_cathedral:0 "Magkirche Cathedral"
  nordkirche_cathedral:0 "Nordkirche Cathedral"
+
+ matliman_canal:0 "Matliman Canal"
