--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -39,3 +39,5 @@
  masccion_dictatorship_reform:0 "Masccion Dictatorship"
  masccion_dictatorship_reform_desc:0 "Our government is a peasant republic created by Masccione family that slowly drifted into nepotism and dictatorship."
  
+ chilverchian_march:0 "Chilverchian March"
+ chilverchian_march_desc:0 "Chilverchian Marches are composed of king errants seeking glory by conquest of foreign lands."
