Turkish Far Steppes Basics
- Added countries of Beliorman, Canarih, Ridirsi
- Added two more cultures to steppe anavatic and one to northern anavatic

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -475,6 +475,12 @@
  MAM_ADJ:0 "Mamerian"
  CHR:0 "Charadied"
  CHR_ADJ:0 "Charadiedian"
+ RID:0 "Ridirsi"
+ RID_ADJ:0 "Ridirsian"
+ CAN:0 "Canarih"
+ CAN_ADJ:0 "Canarihian"
+ BEL:0 "Beliorman"
+ BEL_ADJ:0 "Beliormian"
  
  MEM:0 "Memlashal"
  MEM_ADJ:0 "Memlashan"
