--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -496,8 +496,8 @@
 
  EHW:0 "Ehwitraw"
  EHW_ADJ:0 "Ehwitrawian"
- MEW:0 "Mewat"
- MEW_ADJ:0 "Mewatian"
+ MEW:0 "Mewitasr"
+ MEW_ADJ:0 "Mewitan"
  EHT:0 "Ehtywira"
  EHT_ADJ:0 "Ehtywiran"
  FRA:0 "Fravasum"
