yaltazim holy sites

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -4823,8 +4823,8 @@
  USES_NOT_PIETY:0 "$COUNTRY|Y$ does NOT use Imperial Allegiance."
  USES_PAPACY:0 "$COUNTRY|Y$ uses Papacy."
  USES_NOT_PAPACY:0 "$COUNTRY|Y$ does NOT use Papacy."
- USES_BLESSINGS:0 "$COUNTRY|Y$ uses Blessings."
- USES_NOT_BLESSINGS:0 "$COUNTRY|Y$ does NOT use Blessings."
+ USES_BLESSINGS:0 "$COUNTRY|Y$ uses Teachings."
+ USES_NOT_BLESSINGS:0 "$COUNTRY|Y$ does NOT use Teachings."
  USES_KARMA:0 "$COUNTRY|Y$ uses Karma."
  USES_NOT_KARMA:0 "$COUNTRY|Y$ does NOT use Karma."
  USES_SYNCRETIC_FAITHS:0 "$COUNTRY|Y$ uses Syncretic Faiths."
