--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -703,7 +703,7 @@
  estate_privileges_and_agendas_events.3.k:1 "The Proposal of the [Root.GetRajputsName]"
  estate_privileges_and_agendas_events.3.l:1 "The Proposal of the [Root.GetJanissariesName]"
  estate_privileges_and_agendas_events.3.m:1 "The Proposal of the [Root.GetEunuchsName]"
- estate_privileges_and_agendas_events.3.n: "The Proposal of the [Root.GetQizilbashName]"
+ estate_privileges_and_agendas_events.3.n: "The Proposal of the [Root.GetPeasantryName]"
  estate_privileges_and_agendas_events.3.o:1 "The Proposal of the [Root.GetGhilmanName]"
  estate_privileges_and_agendas_events.6.t:0 "Selling of Crownland"
  estate_privileges_and_agendas_events.6.desc:0 "The treasury of our [Root.GovernmentName] is in a dire situation. Fortunately for us, our estates are very much interested in buying some of our land. Who should we sell our precious property to?"
